--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -1,8 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical"
-    android:id="@+id/list_item_forecast_textview" />
+    android:minHeight="?android:attr/listPreferredItemHeight"
+    android:orientation="horizontal"
+    android:padding="5dp">
+
+    <ImageView
+        android:layout_width="104dp"
+        android:layout_height="57dp"
+        android:id="@+id/imageView"
+        android:src="@drawable/ic_icon1_31_28" />
+
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_weight="0.5"
+        android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:weightSum="1">
+
+        <TextView
+            android:id="@+id/list_item_date_textview"
+            android:layout_width="213dp"
+            android:layout_height="match_parent"
+            android:text="Кофе для турки"
+            android:textSize="20dp" />
+
+</LinearLayout>
+</LinearLayout>
