--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,28 +1,5 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="app.com.example.isuhar.jbmrus.CartActivity"
-    android:orientation="vertical">
-
-
-    <Button
-        android:onClick="onMyClick"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Оформить"
-        android:id="@+id/button_cart"
-        android:layout_gravity="center_horizontal" />
-
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView_cart"
-        android:layout_gravity="center_horizontal" />
-
-</LinearLayout>
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
+android:name="app.com.example.isuhar.jbmrus.CartFragment"
+tools:layout="@layout/fragment_cart" android:layout_width="match_parent"
+android:layout_height="match_parent" />
