--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,9 +6,14 @@
 
     <item
         android:id="@+id/action_cart"
-        android:icon="@drawable/ic_action_action_shopping_cart"
+        android:icon="@drawable/ic_action_shopping_cart"
         android:title="@string/action_cart"
         android:orderInCategory="100"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/action_count_offers"
+        android:title="1"
+        android:orderInCategory="100"
+        app:showAsAction="always" />
 </menu>
