--- a/app/src/main/res/menu/menu_offers.xml
+++ b/app/src/main/res/menu/menu_offers.xml
@@ -1,7 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="app.com.example.isuhar.jbmrus.CartActivity">
-
+    tools:context="app.com.example.isuhar.jbmrus.OffersActivity">
 
 </menu>
