--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,5 +1,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-android:name="app.com.example.isuhar.jbmrus.CartFragment"
-tools:layout="@layout/fragment_cart" android:layout_width="match_parent"
-android:layout_height="match_parent" />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment"
+    android:name="app.com.example.isuhar.jbmrus.CartFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:layout="@layout/fragment_cart" />
