--- a/app/src/main/res/layout/list_offers_forecast.xml
+++ b/app/src/main/res/layout/list_offers_forecast.xml
@@ -3,16 +3,33 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="5dp"
     android:weightSum="1">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/imageView_offer"
+        android:src="@drawable/back_img" />
+
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:minHeight="?android:attr/listPreferredItemHeight"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:background="#ffffffff">
     <TextView
             android:id="@+id/list_item_name_textview"
-            android:layout_width="213dp"
-            android:layout_height="match_parent"
+        android:layout_weight="1.5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="КОФЕ ЯМАЙКА БЛЮ МАУНТИН, ПОМОЛ ДЛЯ ТУРКИ, ОБЖАРКА СРЕДНЯЯ (200 Г)"
-        android:layout_weight="0.69" />
+        android:textAlignment="center"
+        android:textColor="#ff000000" />
 
 
         <TextView
@@ -23,7 +40,10 @@
             android:textStyle="bold"
             android:textIsSelectable="false"
             android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
-            android:layout_weight="0.16" />
+            android:layout_weight="0.0001"
+            android:paddingRight="2dp"
+            android:textColor="#ff000000"
+            android:paddingLeft="10dp" />
 
 
     <TextView
@@ -34,6 +54,8 @@
         android:textStyle="bold"
         android:textIsSelectable="false"
         android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
-        android:layout_weight="0.22" />
+        android:layout_weight="0.0001"
+        android:textColor="#ff000000" />
+</LinearLayout>
 
 </LinearLayout>
