--- a/app/src/main/res/layout/fragment_offers.xml
+++ b/app/src/main/res/layout/fragment_offers.xml
@@ -14,5 +14,6 @@
         android:id="@+id/listView_offers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:divider="@null"/>
 </LinearLayout>
