--- a/app/src/main/res/layout/list_offers_forecast.xml
+++ b/app/src/main/res/layout/list_offers_forecast.xml
@@ -1,17 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="vertical"
-    android:padding="5dp"
-    android:weightSum="1">
+    android:padding="2dp"
+    android:background="#ffcbb290"
+    >
 
-    <ImageView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/imageView_offer"
-        android:src="@drawable/back_img" />
+        android:layout_weight="90"
+        android:layout_margin="2dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView_offer"
+            android:src="@drawable/back_img"
+            android:background="#ffffffff"
+            android:adjustViewBounds="true" />
+    </LinearLayout>
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,42 +29,47 @@
         android:gravity="center_vertical"
         android:minHeight="?android:attr/listPreferredItemHeight"
         android:orientation="horizontal"
-        android:weightSum="1"
-        android:background="#ffffffff">
+        android:background="#ffcd853f"
+        android:layout_weight="100"
+        android:weightSum="100"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp">
     <TextView
             android:id="@+id/list_item_name_textview"
-        android:layout_weight="1.5"
-            android:layout_width="match_parent"
+        android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="КОФЕ ЯМАЙКА БЛЮ МАУНТИН, ПОМОЛ ДЛЯ ТУРКИ, ОБЖАРКА СРЕДНЯЯ (200 Г)"
-        android:textAlignment="center"
-        android:textColor="#ff000000" />
+            android:textAlignment="center"
+            android:textColor="#ff000000"
+        android:layout_weight="10"
+        android:layout_marginLeft="2dp" />
 
 
         <TextView
             android:id="@+id/list_item_price_textview"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="2100"
             android:textStyle="bold"
             android:textIsSelectable="false"
             android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
-            android:layout_weight="0.0001"
-            android:paddingRight="2dp"
+            android:width="70dp"
             android:textColor="#ff000000"
-            android:paddingLeft="10dp" />
+            android:paddingLeft="10dp"
+            android:layout_weight="43" />
 
 
     <TextView
         android:id="@+id/list_item_curency_textview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Р"
         android:textStyle="bold"
         android:textIsSelectable="false"
         android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
-        android:layout_weight="0.0001"
-        android:textColor="#ff000000" />
+        android:textColor="#ff000000"
+        android:layout_weight="48"
+        android:paddingRight="2dp" />
 </LinearLayout>
 
 </LinearLayout>
