--- a/app/src/main/res/layout/list_offers_forecast.xml
+++ b/app/src/main/res/layout/list_offers_forecast.xml
@@ -41,13 +41,13 @@
             android:text="КОФЕ ЯМАЙКА БЛЮ МАУНТИН, ПОМОЛ ДЛЯ ТУРКИ, ОБЖАРКА СРЕДНЯЯ (200 Г)"
             android:textAlignment="center"
             android:textColor="#ff000000"
-        android:layout_weight="10"
-        android:layout_marginLeft="2dp" />
+        android:layout_weight="120"
+        android:layout_marginLeft="5dp" />
 
 
         <TextView
             android:id="@+id/list_item_price_textview"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2100"
             android:textStyle="bold"
@@ -55,21 +55,19 @@
             android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
             android:width="70dp"
             android:textColor="#ff000000"
-            android:paddingLeft="10dp"
-            android:layout_weight="43" />
+            android:layout_weight="10"
+            android:paddingLeft="20dp" />
 
 
-    <TextView
-        android:id="@+id/list_item_curency_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Р"
-        android:textStyle="bold"
-        android:textIsSelectable="false"
-        android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
-        android:textColor="#ff000000"
-        android:layout_weight="48"
-        android:paddingRight="2dp" />
-</LinearLayout>
+        <ImageView
+            android:id="@+id/list_item_curency_textview"
+            android:layout_width="11dp"
+            android:layout_height="18dp"
+            android:src="@drawable/rub_sign"
+            android:textStyle="bold"
+            android:textIsSelectable="false"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
 </LinearLayout>
