--- a/app/src/main/res/layout/fragment_offers.xml
+++ b/app/src/main/res/layout/fragment_offers.xml
@@ -15,5 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:divider="@null"/>
+        android:divider="@null"
+        style="@style/ListViewAppTheme.White" />
 </LinearLayout>
