--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -5,23 +5,24 @@
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="horizontal"
-    android:padding="5dp"
-    android:background="#ffffe9a9">
+    android:background="#ffeae8e9">
 
     <TextView
             android:id="@+id/list_item_textview_category"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="100dp"
             android:text="Кофе для турки"
             android:textSize="25dp"
         android:autoText="false"
-        android:background="#ffffffff"
+        android:background="@drawable/mytheme_btn_default_holo_light"
         android:clickable="false"
         android:textColor="#ff000000"
-        android:theme="@style/Base.V14.Theme.AppCompat.Light"
-        style="@style/Base.TextAppearance.AppCompat.Large"
-        android:layout_margin="3dp"
-        android:paddingLeft="80dp" />
+        style="@style/ListViewBraunTheme"
+        android:linksClickable="false"
+        android:longClickable="false"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_margin="2dp"
+        />
 
 
 </LinearLayout>
