--- a/app/src/main/res/layout/fragment_offers.xml
+++ b/app/src/main/res/layout/fragment_offers.xml
@@ -16,5 +16,5 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:divider="@null"
-        style="@style/ListViewAppTheme.White" />
+        style="@style/ListViewBraunTheme" />
 </LinearLayout>
