--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -21,8 +21,7 @@
         android:linksClickable="false"
         android:longClickable="false"
         android:gravity="center_vertical|center_horizontal"
-        android:layout_margin="2dp"
-        />
+        android:layout_margin="2dp" />
 
 
 </LinearLayout>
