--- a/app/src/main/res/layout/list_offers_forecast.xml
+++ b/app/src/main/res/layout/list_offers_forecast.xml
@@ -4,7 +4,8 @@
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="vertical"
     android:padding="2dp"
-    android:background="#ffc5c3c4"
+    android:background="@drawable/mytheme_btn_default_holo_light"
+
     >
 
     <LinearLayout
@@ -29,7 +30,7 @@
         android:gravity="center_vertical"
         android:minHeight="?android:attr/listPreferredItemHeight"
         android:orientation="horizontal"
-        android:background="#ffe7e4e2"
+        android:background="#ffeae8e9"
         android:layout_weight="100"
         android:weightSum="100"
         android:layout_marginLeft="2dp"
@@ -37,13 +38,13 @@
         android:layout_marginBottom="2dp">
     <TextView
             android:id="@+id/list_item_name_textview"
-        android:layout_width="match_parent"
+        android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:text="КОФЕ ЯМАЙКА БЛЮ МАУНТИН, ПОМОЛ ДЛЯ ТУРКИ, ОБЖАРКА СРЕДНЯЯ (200 Г)"
             android:textAlignment="center"
             android:textColor="#ff000000"
-        android:layout_weight="120"
-        android:layout_marginLeft="5dp" />
+        android:layout_marginLeft="5dp"
+        android:layout_weight="78.46" />
 
 
         <TextView
@@ -56,8 +57,8 @@
             android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
             android:width="70dp"
             android:textColor="#ff000000"
-            android:layout_weight="10"
-            android:paddingLeft="20dp" />
+            android:layout_weight="1"
+            android:paddingLeft="15dp" />
 
 
         <ImageView
