--- a/app/src/main/res/layout/activity_offers.xml
+++ b/app/src/main/res/layout/activity_offers.xml
@@ -1,5 +1,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_offers_container"
     android:name="app.com.example.isuhar.jbmrus.OffersActivityFragment"
-    tools:layout="@layout/fragment_offers" android:layout_width="match_parent"
+    tools:layout="@layout/fragment_offers"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" />
