--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -14,7 +14,7 @@
             android:text="Кофе для турки"
             android:textSize="25dp"
         android:autoText="false"
-        android:background="@drawable/mytheme_btn_default_holo_light"
+        android:background="@drawable/touch_selector"
         android:clickable="false"
         android:textColor="#ff000000"
         style="@style/ListViewBraunTheme"
