--- a/app/src/main/res/layout/list_offers_forecast.xml
+++ b/app/src/main/res/layout/list_offers_forecast.xml
@@ -4,7 +4,7 @@
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="vertical"
     android:padding="2dp"
-    android:background="@drawable/mytheme_btn_default_holo_light"
+    android:background="@drawable/touch_selector"
 
     >
 
